--- a/koa2-router-demo/test.html
+++ b/koa2-router-demo/test.html
@@ -8,17 +8,9 @@
 
 <script>
 
-    var arr = [
-        {
-            id:1,
-            title:234
-        }
-    ];
-    console.log(arr.map((v,i)=>{
-       console.log( Object.keys(v))
-        Object.keys(v).forEach(s=>{
-            console.log(arr[i][s])
-        })
+    var str='ndsakfjk"lsdfmk"';
+    console.log(str.replace(/\d/,function (e) {
+        console.log(e)
     }))
 </script>
 </body>
