--- a/app2/public/index.html
+++ b/app2/public/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="renderer" content="webkit" />
+    <meta http-equiv="description" content="刘伟波-天天向上" />
+    <meta name="Keywords" content="刘伟波, 个人博客, 个人网站, web前端" />
+    <meta name="Description" content="刘伟波的个人博客，刘伟波的技术作品，刘伟波的生活成长" />
+    <meta name="author" content="刘伟波,liuweibo" />
+
+    <meta name="baidu-site-verification" content="bujBfBFkgc" />
+
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -19,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>刘伟波的个人博客 &raquo; 刘伟波-天天向上</title>
   </head>
   <body>
     <noscript>
